--- a/machine.html
+++ b/machine.html
@@ -116,11 +116,11 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698156568-head-of-machine-learning'>Omio Head of Machine Learning | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698156568-head-of-machine-learning'>Omio Head of Machine Learning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/checkout/56eed15c-f958-4ea6-85a5-57ce35f0500b'>Checkout.com - Machine Learning Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/checkout/56eed15c-f958-4ea6-85a5-57ce35f0500b'>Checkout.com - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -140,7 +140,7 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/the-yes/ffbd939f-fe2e-4270-bbe5-010be449188f'>The Yes - Software Engineer - Machine Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/the-yes/ffbd939f-fe2e-4270-bbe5-010be449188f'>The Yes - Software Engineer - Machine Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -149,7 +149,7 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p>Oct 15, 2019 ... As either the Deep Learning Engineer or ML Research Engineer, you will be at 
 the center of our core mission, building state of the art technologies. You will be?...</p>
 <hr/>
-<h5><a href='https://apply.workable.com/bios-3/j/A55BA1465A/'>Machine Learning Developer - BIOS</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/bios-3/j/A55BA1465A/'>Machine Learning Developer - BIOS</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Perform research to apply machine learning (particularly deep learning, 
 reinforcement learning and transfer learning) to real world problems. Provide 
@@ -261,7 +261,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p>2 days ago ... Cruise is looking for ML optimization engineers to help us invest in tools to 
 optimize deep learning models for efficient inference. These optimizations are?...</p>
 <hr/>
-<h5><a href='https://bigcloud.io/jobs/senior-machine-learning-researcher/'>Senior Machine Learning Researcher | Big Cloud Recruitment</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bigcloud.io/jobs/senior-machine-learning-researcher/'>Senior Machine Learning Researcher | Big Cloud Recruitment</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
@@ -289,7 +289,7 @@ ML;?...</p>
 <p><span class="badge badge-light">Zug, Switzerland</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tensortechnologies.recruitee.com/o/trader-with-machine-learning-experience'>
+<h5><a href='https://tensortechnologies.recruitee.com/o/trader-with-machine-learning-experience'>
       Trader with Machine Learning experience - Tensor Technologies
     </a></h5> 
 <p><span class="badge badge-light">Zug, Switzerland</span></p>
@@ -396,7 +396,7 @@ deploy Machine Learning models into the company's core services. You'll be?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://humana.wd5.myworkdayjobs.com/en-US/Humana_External_Career_Site/job/Boston-MA/Cognitive-Machine-Learning---Data-Scientist_R-220021?source=BuiltInBoston'>Cognitive/Machine Learning - Data Scientist</a></h5> 
+<h5><a href='https://humana.wd5.myworkdayjobs.com/en-US/Humana_External_Career_Site/job/Boston-MA/Cognitive-Machine-Learning---Data-Scientist_R-220021?source=BuiltInBoston'>Cognitive/Machine Learning - Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Humana's Data Health and Analytics Team is seeking a Cognitive/Machine 
 Learning ?Data Scientist. This position collaborates with analytic and data teams 
@@ -483,7 +483,7 @@ and?...</p>
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mitre.referrals.selectminds.com/jobs/associate-machine-learning-engineer-7103'>Associate Machine Learning Engineer - MITRE Careers</a></h5> 
+<h5><a href='https://mitre.referrals.selectminds.com/jobs/associate-machine-learning-engineer-7103'>Associate Machine Learning Engineer - MITRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
