--- a/android-developer.html
+++ b/android-developer.html
@@ -49,6 +49,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999698354961-internship-mobile-android-developer'>Netatmo INTERNSHIP - Mobile Android Developer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/RAKUNA1/743999698346128-android-mobile-app-developer'>RAKUNA Android Mobile App Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam  Ho Chi Minh Vietnam</span></p>
 <p>Posted on: 2019-10-28</p>
@@ -109,7 +113,7 @@ Android Developer at Dyson in Wiltshire | Android jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/commencis/d7fe92a6-ffa5-428a-a70b-50532b7b018f'>Commencis - Senior Android Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/commencis/d7fe92a6-ffa5-428a-a70b-50532b7b018f'>Commencis - Senior Android Developer</a></h5> 
 <p><span class="badge badge-light">Istanbul</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -193,7 +197,7 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p>Oct 10, 2019 ... Junior Android Developer We are looking for a hands-on Android App Developer 
 with a passion for creating innovative digital experiences, to help us launch the?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://holycodedoo.applytojob.com/apply/3eMJLOfKln/Android-Developer-Oviva-Team'>Android Developer - Oviva Team - Holycode - Career Page</a></h5> 
+<h5><a href='http://holycodedoo.applytojob.com/apply/3eMJLOfKln/Android-Developer-Oviva-Team'>Android Developer - Oviva Team - Holycode - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -234,7 +238,7 @@ development and maintenance of applications aimed at the public as well as?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
-<h5><a href='https://www.xero.com/about/careers/job/7ef51fe2ff87be8195ea2529f09b3fcc5e6ed0fce7d9a9f3f0278a209d96e84e/'>Android Developer | Xero </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.xero.com/about/careers/job/7ef51fe2ff87be8195ea2529f09b3fcc5e6ed0fce7d9a9f3f0278a209d96e84e/'>Android Developer | Xero </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -244,7 +248,7 @@ development and maintenance of applications aimed at the public as well as?...</
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/beetalents/fd5e3fde-24a6-4a7a-a2a9-c629ea3f8f6d'>Bee Talents - Android Developer - Kangaroo [do $5500 netto B2B]</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/beetalents/fd5e3fde-24a6-4a7a-a2a9-c629ea3f8f6d'>Bee Talents - Android Developer - Kangaroo [do $5500 netto B2B]</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -386,7 +390,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Santa Clara, CA  Redwood City</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<h5><a href='https://www.qptech.ie/jobs/android-developer-2/'>Android Developer | IT Jobs in Limerick, Cork &amp; Dublin</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.qptech.ie/jobs/android-developer-2/'>Android Developer | IT Jobs in Limerick, Cork &amp; Dublin</a></h5> 
 <p><span class="badge badge-light">Dublin  Dublin</span></p>
 <p>Posted on:: 2019-10-13</p>
 <hr/>
@@ -396,7 +400,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://techfirefly.workable.com/j/169E74AF68'>Tech Firefly - Jobs: Android Developer (Locals Only) - Apply online</a></h5> 
+<h5><a href='https://techfirefly.workable.com/j/169E74AF68'>Tech Firefly - Jobs: Android Developer (Locals Only) - Apply online</a></h5> 
 <p><span class="badge badge-light">United States  Plano, TX</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -495,10 +499,6 @@ Remote Android Developer at komoot | Android jobs | 42jobs.io
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-08</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/projekt202/7b0cf8e9-e875-44d5-a312-3c341d5edcc4'>projekt202 - Senior Android Developer (contract)</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-08</p>
 <hr/>
 
 
