Deezer Front End Developer - Content Team (Internship) | SmartRecruiters. Job @ Shiji (Faro): Front End Developer | JOIN. Senior Front End Developer - Experian Careers. Job Application for Sr. Front End Engineer at Pendo. Polarr - Senior Frontend Engineer. Polarr - Senior Frontend Engineer. Blueliv - Front End Developer. Front-end Developer - Vodastra - Career Page. Front-end Developer - Vodastra - Career Page. umlaut North America Careers - Front-End Web Developer. Senior Frontend Developer (Angular) - Diversitas Team - Holycode - Career Page. Optimizely Lead Front End Developer, On-Demand Services | SmartRecruiters. Job Application for Senior Front-end Engineer at SoundHound Inc.. Job Application for Senior Front-end Engineer at SoundHound Inc.. Job @ JKweb (Zürich): Web Entwickler Frontend 60 -... | JOIN. Front End Engineer - IntelliPro Group Inc. - Career Page. Sales Tools Front-End Engineer - IntelliPro Group Inc. - Career Page.     Front End Developer at Scripbox Advisors Private Limited . umlaut North America Careers - Front-End Web Developer. Internet Brands Careers - Front End Developer. Miratech Front-End Developer | SmartRecruiters. Square Senior Software Engineer (Front-End/Full Stack), Customers Team | SmartRecruiters. Job Application for Analysis Tools Frontend Engineer at Graphcore. ServiceNow Careers - Staff Quality Engineer, Front-end. Job @ Finanzchef24 (Munich): Senior Frontend Engin... | JOIN. Job @ JOIN Solutions (Berlin): Senior Frontend Eng... | JOIN. Web Designer - Front End - ZigZag Careers - Career Page. Bey Front End Developer | SmartRecruiters. Q4 - Intermediate Front End Developer. HelloOffice - Front End Engineer. Job @ Metals Hub (Düsseldorf): Frontend Developer ... | JOIN. Copper CRM - Front End Engineer. N3TWORK Careers - Front End Web Engineer. DNEG Careers - Front End Developer. Job @ maxcluster (Paderborn): UI/UX Frontend Desig... | JOIN. Senior Front End Developer - Zonal Retail Data Systems Limited - Career Page. Palo Alto Netwo

--- a/frontend.html
+++ b/frontend.html
@@ -38,6 +38,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/Deezer/743999698356459-front-end-developer-content-team-internship-'>Deezer Front End Developer - Content Team (Internship) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Paris, France</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://shijigroup.join.com/jobs/461187-front-end-developer'>Job @ Shiji (Faro): Front End Developer | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://experian.referrals.selectminds.com/jobs/senior-front-end-developer-14066'>Senior Front End Developer - Experian Careers</a></h5> 
 <p><span class="badge badge-light">Scottsdale, Arizona United States  North America</span></p>
 <p>Posted on: 2019-10-29</p>
@@ -58,7 +66,7 @@
 <p><span class="badge badge-light">Barcelona  Barcelona</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://vodastra.applytojob.com/apply/QTgaaKI0cl/Frontend-Developer'>Front-end Developer - Vodastra - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://vodastra.applytojob.com/apply/QTgaaKI0cl/Frontend-Developer'>Front-end Developer - Vodastra - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -112,7 +120,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Miratech1/743999698051706-front-end-developer'>Miratech Front-End Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Miratech1/743999698051706-front-end-developer'>Miratech Front-End Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -260,7 +268,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584443'>Stellenangebot: Senior Frontend Developer (w/m/d) (K?ln) ? dasauge? Stellenmarkt</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584443'>Stellenangebot: Senior Frontend Developer (w/m/d) (K?ln) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -272,11 +280,11 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/signifyd95/jobs/1909852'>Job Application for Senior Software Engineer (Front-end) at Signifyd</a></h5> 
+<h5><a href='https://boards.greenhouse.io/signifyd95/jobs/1909852'>Job Application for Senior Software Engineer (Front-end) at Signifyd</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698248390-front-end-software-engineer-kms-solutions-'>KMS Technology FRONT-END SOFTWARE ENGINEER (KMS Solutions) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698248390-front-end-software-engineer-kms-solutions-'>KMS Technology FRONT-END SOFTWARE ENGINEER (KMS Solutions) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -360,7 +368,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">Warsaw Warsaw  Warsaw, Poland  Warsaw</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/glovo/jobs/4489112002'>Job Application for Frontend Engineer - Customer Experience at Glovo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/glovo/jobs/4489112002'>Job Application for Frontend Engineer - Customer Experience at Glovo</a></h5> 
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -448,14 +456,6 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <hr/>
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oBdQafwy&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nX6mlMw1'>ServiceNow Careers - Staff Front End Software Engineer, Platform</a></h5> 
 <p><span class="badge badge-light">San Diego, California  San Diego, CA</span></p>
-<p>Posted on:: 2019-10-27</p>
-<hr/>
-<h5><a href='https://dedeleads.com/job/spruce-health-looking-for-frontend-web-engineer/'>Spruce Health looking for Frontend Web Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-27</p>
-<hr/>
-<h5><a href='https://dedeleads.com/job/jefferson-frank-looking-for-fully-remote-front-end-engineer-salary-us140000-us160000-per-annum/'>Jefferson Frank looking for Fully Remote Front End Engineer( Salary: US$140000 - US$160000 per annum)</a></h5> 
-<p><span class="badge badge-light">New York</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
 
